[gd_scene load_steps=24 format=3 uid="uid://b0e4h1qa4ux8s"]

[ext_resource type="Script" path="res://scenes/skeleton.gd" id="1_4h3m6"]
[ext_resource type="Texture2D" uid="uid://ca58u2ygup8lf" path="res://assets/skeleton spritesheet.png" id="2_pihku"]
[ext_resource type="AudioStream" uid="uid://bbfny56mx827c" path="res://assets/sound/zombie-6.wav" id="3_6ll06"]

[sub_resource type="AtlasTexture" id="AtlasTexture_i20oc"]
atlas = ExtResource("2_pihku")
region = Rect2(32, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_arlcw"]
atlas = ExtResource("2_pihku")
region = Rect2(48, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3fqnx"]
atlas = ExtResource("2_pihku")
region = Rect2(0, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6u0i2"]
atlas = ExtResource("2_pihku")
region = Rect2(16, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jxpyu"]
atlas = ExtResource("2_pihku")
region = Rect2(32, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wyiwi"]
atlas = ExtResource("2_pihku")
region = Rect2(48, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ij62p"]
atlas = ExtResource("2_pihku")
region = Rect2(0, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qbbs5"]
atlas = ExtResource("2_pihku")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jlydn"]
atlas = ExtResource("2_pihku")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pvpk3"]
atlas = ExtResource("2_pihku")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gjg2k"]
atlas = ExtResource("2_pihku")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_kx58s"]
atlas = ExtResource("2_pihku")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1mtew"]
atlas = ExtResource("2_pihku")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ffvb4"]
atlas = ExtResource("2_pihku")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ml3h"]
atlas = ExtResource("2_pihku")
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dlod0"]
atlas = ExtResource("2_pihku")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4slxu"]
atlas = ExtResource("2_pihku")
region = Rect2(16, 32, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_3nls7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i20oc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_arlcw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3fqnx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6u0i2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jxpyu")
}],
"loop": true,
"name": &"attacking",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wyiwi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ij62p")
}],
"loop": true,
"name": &"detected",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qbbs5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jlydn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pvpk3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gjg2k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kx58s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1mtew")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ffvb4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ml3h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dlod0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4slxu")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_vgtp8"]
radius = 8.0

[sub_resource type="CircleShape2D" id="CircleShape2D_0kf4q"]
radius = 32.0

[node name="Skeleton" type="Area2D" groups=["skeletons"]]
z_index = 1
script = ExtResource("1_4h3m6")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_3nls7")
animation = &"attacking"
frame_progress = 0.0490945

[node name="CollisionArea" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_vgtp8")

[node name="DetectArea" type="Area2D" parent="."]

[node name="DetectBox" type="CollisionShape2D" parent="DetectArea"]
shape = SubResource("CircleShape2D_0kf4q")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[node name="FreezeTimer" type="Timer" parent="."]
one_shot = true

[node name="AttackSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_6ll06")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_entered" from="DetectArea" to="." method="_on_detect_area_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="FreezeTimer" to="." method="_on_freeze_timer_timeout"]
